[package]
name = "strelka"
version = "0.1.0"
authors = ["David Futcher <david@futcher.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
krpc_mars = { git = 'https://github.com/Cahu/krpc-mars.git' }

[build-dependencies]
glob = "0.3"
krpc_mars_terraformer = { git = 'https://github.com/bobbo/krpc-mars-terraformer.git' }
